# invenio-dev-latest

./: .dockerignore  .env  .env.example  .gitignore  .invenio  AGENTS.md  Dockerfile  Pipfile  README.md  docker-compose.full.yml  docker-compose.yml  docker-services.yml  flake.nix  install-with-uv.sh  install_local_packages.sh  invenio.cfg  openapi_generated.yaml  pnpm-lock.yaml  pyproject.toml  roles_setup.sh  wipe_recreate.sh
.agents/skills/invenio/: SKILL.md
app_data/: pages.yaml  vocabularies-future.yaml
app_data/pages/: community_manager_responsibilities_en.html  community_manager_responsibilities_sv.html  create_community_en.html  create_community_sv.html  github_integration_en.html  github_integration_sv.html  how_to_en.html  how_to_sv.html  rest_api_reference_en.html  rest_api_reference_sv.html  restrict_record_access_en.html  restrict_record_access_sv.html  share_record_access_en.html  share_record_access_sv.html  terms_en.html  terms_sv.html  upload_record_en.html  upload_record_sv.html
artifacts/: celery-spawn-macos-all-changes.md  celery-spawn-macos-all-changes.patch
assets/js/components/deposit/: PublishModalOverride.js  SubmitReviewModalOverride.js  TermsAndConditionsText.js
assets/js/components/deposit/overrides/: CommunityHeaderOverride.js
assets/js/components/deposit/utils/: index.js
assets/js/invenio_app_rdm/overridableRegistry/: mapping.js
docker/nginx/: test.crt  test.key
docker/nginx/conf.d/: default.conf
docker/pgadmin/: servers.json
i18n-collected/: validation-report.json
i18n-collected/invenio_access/: translations.json
i18n-collected/invenio_accounts/: translations.json
i18n-collected/invenio_administration/: translations.json
i18n-collected/invenio_app_rdm/: translations.json
i18n-collected/invenio_banners/: translations.json
i18n-collected/invenio_communities/: translations.json
i18n-collected/invenio_drafts_resources/: translations.json
i18n-collected/invenio_files_rest/: translations.json
i18n-collected/invenio_formatter/: translations.json
i18n-collected/invenio_github/: translations.json
i18n-collected/invenio_i18n/: translations.json
i18n-collected/invenio_jobs/: translations.json
i18n-collected/invenio_notifications/: translations.json
i18n-collected/invenio_oaiserver/: translations.json
i18n-collected/invenio_oauth2server/: translations.json
i18n-collected/invenio_oauthclient/: translations.json
i18n-collected/invenio_pages/: translations.json
i18n-collected/invenio_pidstore/: translations.json
i18n-collected/invenio_previewer/: translations.json
i18n-collected/invenio_rdm_records/: translations.json
i18n-collected/invenio_records/: translations.json
i18n-collected/invenio_records_resources/: translations.json
i18n-collected/invenio_records_rest/: translations.json
i18n-collected/invenio_records_ui/: translations.json
i18n-collected/invenio_requests/: translations.json
i18n-collected/invenio_search_ui/: translations.json
i18n-collected/invenio_stats/: translations.json
i18n-collected/invenio_theme/: translations.json
i18n-collected/invenio_userprofiles/: translations.json
i18n-collected/invenio_users_resources/: translations.json
i18n-collected/invenio_vocabularies/: translations.json
i18n-collected/invenio_webhooks/: translations.json
js-translations/: ar.json  bg.json  ca.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  hr.json  hu.json  it.json  ja.json  ka.json  ko.json  lt.json  no.json  pl.json  pt.json  ro.json  ru.json  sk.json  sv.json  tr.json  uk.json  zh_CN.json  zh_TW.json
js-translations-updated/: sv.json
scripts/: clean_logs_warnings.sh  create_checks.py  ignite_app.sh  open_api_gen.py  pypi_freshness_check.py  seed-roles.py  update-changelog.sh
scripts/CI/: cleanlog.sh
scripts/check_infected/: README.md  check_infected.py  convert_csv_json.py  npm_infected_versions.json  shai-hulud-2-packages.json
scripts/community_checks/: create_checks.py
scripts/dev/: check_active_venv.sh  cleanup_community_requests.py  complete_cleanup_queues.sh  dep-tree.sh  seed-roles.py  seed_users.sh  seed_users_login_info.py
scripts/dev/user-check-tools/: check_users_login_info_index.py  seed_users_login_info.py
scripts/diffs/: token_audit_changes.patch
scripts/indices-migration-v13-14/: user-groups-indices-migration.py
scripts/mermaid/: deps.mmd  uvlock_to_mermaid.py
scripts/open_api/: invenio_openapi_generator.py
scripts/s3/: mark_as_local.py  simulate_failed_upload.py
scripts/update_db_files_uri/: update_db_files_uri.py
site/: .gitkeep  pyproject.toml  setup.cfg
site/latest_build/: __init__.py  ext.py  permissions.py  tasks.py  views.py  webpack.py
site/latest_build/accounts/: __init__.py  patches.py  routes.py
site/latest_build/administration/: roles.py
site/latest_build/docs/: upstreaming-roles-overrides.md
