[project]
name = "latest-build-instance"
description = "latest build for invenioRDM"
version = "14.0.0b5.dev6"
requires-python = ">= 3.12"

dependencies = [
  "invenio-app-rdm[opensearch2,s3]~=14.0.0b5.dev6",
  "python-dotenv>=0.21.0",
  "uwsgi>=2.0",
  "uwsgitop>=0.11",
  "uwsgi-tools>=1.1.1",
  "lxml-html-clean>=0.1.1",
  "latest-build", # this is not needed but kept for reference
  "invenio-cli",
  "apispec[marshmallow,yaml]>=6.8.3",
  "apispec-webframeworks>=1.2.0",
]

[tool.uv.sources]
"latest-build" = { workspace = true }

[tool.uv.workspace]
members = [
  "site",
]

[project.optional-dependencies]
tests = [
    "pytest-invenio>=4.0.0,<5.0.0",
    "pytest-invenio>=4.0.0,<5.0.0",
    "ruff>=0.13.0",
    "flask-debugtoolbar>=0.16.0",
    "pdbpp>=0.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
