[project]
name = "latest-build-instance"
description = "latest build for invenioRDM"
version = "13.1.0"
requires-python = ">= 3.12"

dependencies = [
  "invenio-app-rdm[opensearch2,s3]~=13.1.0",
  "python-dotenv>=0.21.0",
  "uwsgi>=2.0",
  "uwsgitop>=0.11",
  "uwsgi-tools>=1.1.1",
  "lxml-html-clean>=0.1.1",
  "latest-build",
  "setuptools<81",
]

[tool.uv.sources]
latest_build = { workspace = true }

[tool.uv.workspace]
members = [
  "site",
]

[dependency-groups]
dev = [
    "flask-debugtoolbar>=0.16.0",
    "pdbpp>=0.11.7",
    "pytest-invenio>=3.0.0,<4.0.0",
    "ruff>=0.13.0",
]

[project.optional-dependencies]
tests = [
    "pytest-invenio>=3.0.0,<4.0.0",
]
