[project]
name = "latest-build-instance"
description = "latest build for invenioRDM"
version = "15.0.0b0.dev0"
requires-python = ">= 3.14"

dependencies = [
  "invenio-app-rdm[opensearch2,s3]~=15.0.0b0.dev0",
  "invenio-vcs>=0.3.0,<0.4.0",
  "python-dotenv>=1.1.0",
  "uwsgi>=2.0",
  "uwsgitop>=0.11",
  "uwsgi-tools>=1.1.1",
  "lxml-html-clean>=0.1.1",
  "latest-build",
]

[tool.uv.sources]
"latest-build" = { workspace = true }

[tool.uv.workspace]
members = ["site"]

[project.optional-dependencies]
tests = [
  "pytest-invenio>=4.0.0,<5.0.0",
  "ruff>=0.13.0",
  "flask-debugtoolbar>=0.16.0",
  "pdbpp>=0.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
