[project]
name = "latest-build"
version = "1.0.0"
description = "no desc"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = ["D401", "D403"]

[tool.pytest.ini_options]
addopts = ["--isort", "--pydocstyle", "--doctest-glob=\"*.rst\"", "--doctest-modules", "--cov=zenodo_rdm", "--cov-report=term-missing", "--exclude-warning-annotations"]
testpaths = "tests zenodo_rdm"
live_server_scope = "module"