[project]
name = "latest-build"
version = "1.0.0"
description = "no desc"
requires-python = ">= 3.12"

[project.entry-points."invenio_base.blueprints"]
latest_build_views = "latest_build.views:create_blueprint"

[project.entry-points."invenio_assets.webpack"]
latest_build_theme = "latest_build.webpack:theme"

[project.entry-points."invenio_celery.tasks"]
latest_build_tasks = "latest_build.tasks"

[project.entry-points."invenio_base.api_finalize_app"]
latest_build = "latest_build.ext:api_finalize_app"

[project.entry-points."invenio_base.finalize_app"]
latest_build = "latest_build.ext:finalize_app"

[project.entry-points."invenio_administration.views"]
latest_build_roles_list = "latest_build.administration.roles:RolesListView"
latest_build_roles_detail = "latest_build.administration.roles:RolesDetailView"
latest_build_roles_create = "latest_build.administration.roles:RolesCreateView"
latest_build_roles_edit = "latest_build.administration.roles:RolesEditView"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = ["D401", "D403"]

[tool.pytest.ini_options]
addopts = ["--isort", "--pydocstyle", "--doctest-glob=\"*.rst\"", "--doctest-modules", "--cov=zenodo_rdm", "--cov-report=term-missing", "--exclude-warning-annotations"]
testpaths = "tests zenodo_rdm"
live_server_scope = "module"
