
[metadata]
name = latest-build

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    latest_build_views = latest_build.views:create_blueprint
invenio_assets.webpack =
    latest_build_theme = latest_build.webpack:theme
invenio_celery.tasks =
    latest_build_tasks = latest_build.tasks